# movie-recommender-rs

./: .gitignore  README.md  app.py  pyproject.toml
config/: settings.py
movie-recommender/: pyproject.toml
src/utils/: ai_recommendations.py  database.py  tmdb_api.py
