[tool.poetry]
name = "movie-recommender-rs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
openai = "^1.97.0"
requests = "^2.32.4"
supabase = "^2.17.0"
streamlit = "^1.47.0"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
